[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bottle_sql"
version = "0.0.2"
authors = [
  { name="TJ Renninger", email="renninger12@gmail.com" },
]
description = "SQL plugin for Bottle"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "bottle", "pymysql"
]
